LA-269 fixed contrast and touch target sizing issue.

--- a/web/apps/water/waterworks/css/main.css
+++ b/web/apps/water/waterworks/css/main.css
@@ -7,7 +7,7 @@ body {
   font-size: 100%;
   line-height: 1.5;
   font-family: "Roboto", sans-serif;
-  color: #565a5c;
+  color: #37393a;
 }
 
 @media print {
@@ -55,7 +55,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: #565a5c;
+  color: #37393a;
 }
 
 h1 {
@@ -188,7 +188,7 @@ button:focus {
 .location,
 .dates {
   display: block;
-  color: #82888a;
+  color: #37393a;
   font-weight: 400;
   line-height: 22px;
   white-space: nowrap;
@@ -284,7 +284,7 @@ button:focus {
 }
 
 .projectTeaser .modal-content .modal-close:before {
-  color: #565a5c;
+  color: #37393a;
 }
 
 .projectTeaser .modal-content .modal-body {
@@ -744,7 +744,7 @@ button:focus {
   font-weight: 400;
   display: block;
   text-align: center;
-  color: #565a5c;
+  color: #37393a;
 }
 
 .searchPanel .searchFilters .filters .btnFilters {
@@ -839,7 +839,7 @@ button:focus {
 .searchPanel #CurrentProjects .projectsListContainer .projectsSummary {
   font-weight: 700;
   padding: 1em 0;
-  color: #82888a;
+  color: #37393a;
   font-size: 14px;
   font-size: 0.875rem;
 }
@@ -1027,7 +1027,7 @@ button:focus {
   font-size: 0.8em;
   line-height: normal;
   font-style: italic;
-  color: #82888a;
+  color: #37393a;
   position: absolute;
   bottom: 0;
   padding: 10px;
@@ -1075,7 +1075,7 @@ button:focus {
 
 .projectDetail .detailContainer .metaWrap .meta span {
   display: block;
-  color: #82888a;
+  color: #37393a;
   font-size: 14px;
   font-size: 0.875rem;
 }
@@ -1214,6 +1214,10 @@ button:focus {
   outline: none !important;
   box-shadow: inset 0 0 0 3px #1F70C5 !important;
   outline-offset: 2px;
+}
+
+#searchSubmit {
+  width: 24px;
 }
 
 .map-wrapper {
